Aggiornato POM con junit version 5.8.1